--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
+    "framer-motion": "^12.23.22",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
