--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@mui/material": "^7.3.2",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.0",
     "cors": "^2.8.5",
     "framer-motion": "^12.23.22",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1",
-    "recharts": "^3.2.1"
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
